--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,11 @@ env_logger = "0.10.0"
 epub-builder = "0.7.4"
 eyre = "0.6.8"
 futures = "0.3.29"
+html5ever = "0.26.0"
 log = "0.4.20"
+markup5ever = "0.11.0"
 reqwest = { version = "0.11", features = ["json", "stream"] }
 scraper = "0.18.0"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.10", features = ["compat"] }
+xml5ever = "0.17.0"
